<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBEE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#F44336"
        android:paddingBottom="25dp"
        android:text="@string/top_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/popular_movies"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EF9A9A"
        android:text="@string/popular_movies" />

    <Button
        android:id="@+id/stock_hawk"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EF9A9A"
        android:text="@string/stock_hawk" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EF9A9A"
        android:text="@string/stock_hawk" />

    <Button
        android:id="@+id/make_your_app_material"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EF9A9A"
        android:text="@string/make_your_own_app_material" />

    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EF9A9A"
        android:text="@string/go_ubiquitous" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#EF9A9A"
        android:text="@string/capstone" />

</LinearLayout>
